--- a/roles/monitoring-client/defaults/main.yml
+++ b/roles/monitoring-client/defaults/main.yml
@@ -2,6 +2,7 @@
 standalone_checks: {}
 client_settings: {}
 system_profile: false
+disk_metrics: false
 sensu_system_profile_version: ab29feda43bafcf4207ef4ac238214cf70e800e9 #master @ 4.05.2015
 monitoring_port: 5671
 monitoring_insecure: true
