Reference vendor roles in default roles path

--- a/highcore/roles/api/meta/main.yml
+++ b/highcore/roles/api/meta/main.yml
@@ -18,7 +18,7 @@ dependencies:
   - role: templates
     templates_user: "{{ api_user }}"
 
-  - role: '{{ playbook_dir }}/roles/monitoring-client'
+  - role: monitoring-client
     tags: monitoring-client
     monitoring_hostname: "{{ api_monitoring_hostname }}"
     standalone_checks:
