Default credentials_file to an empty string to handle vars evaluation when it's missing

--- a/highcore/roles/api/defaults/main.yml
+++ b/highcore/roles/api/defaults/main.yml
@@ -6,7 +6,7 @@ api_deploy_version: 'master'
 api_deploy_to_version: '{{ api_deploy_to }}/{{ api_deploy_version }}'
 api_config_dir: '{{ api_deploy_to_version }}'
 api_repository: 'git@github.com:sourcestream/{{ api_app }}.git'
-api_credentials_file: '{{ credentials_file }}'
+api_credentials_file: '{{ credentials_file | default("") }}'
 api_env_template: env.j2
 api_known_hosts: '{{ repository_host_key }}'
 api_vhost_template: roles/api/templates/webserver/vhost.j2
