--- a/roles/grunt/meta/main.yml
+++ b/roles/grunt/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 allow_duplicates: no
 dependencies:
-  - role: '{{ playbook_dir }}/roles/nodejs'
+  - role: '{{ playbook_dir }}/../roles/nodejs'
