--- a/roles/php-webapp/meta/main.yml
+++ b/roles/php-webapp/meta/main.yml
@@ -1,14 +1,14 @@
 ---
 allow_duplicates: yes
 dependencies:
-  - role: '{{ playbook_dir }}/roles/deploy'
+  - role: '{{ playbook_dir }}/../roles/deploy'
     deploy_user: "{{ php_webapp_user }}"
     deploy_to: "{{ php_webapp_deploy_to }}"
     deploy_version: "{{ php_webapp_deploy_version }}"
     deploy_repository: "{{ php_webapp_repository }}"
-  - role: '{{ playbook_dir }}/roles/composer'
-  - role: '{{ playbook_dir }}/roles/php5-fpm'
-  - role: '{{ playbook_dir }}/roles/webserver'
+  - role: '{{ playbook_dir }}/../roles/composer'
+  - role: '{{ playbook_dir }}/../roles/php5-fpm'
+  - role: '{{ playbook_dir }}/../roles/webserver'
     webserver_port: '{{ php_webapp_port }}'
     webserver_vhost: "{{ php_webapp_app }}"
     webserver_vhost_file: "{{ php_webapp_vhost_template }}"
