--- a/roles/letsencrypt/tasks/main.yml
+++ b/roles/letsencrypt/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- apt_repository:
+    repo: ppa:certbot/certbot
+
 - name: Install packages
   action: '{{ ansible_pkg_mgr }} pkg={{ item }}'
   with_items:
