--- a/highcore/roles/api/meta/main.yml
+++ b/highcore/roles/api/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 allow_duplicates: yes
 dependencies:
+  - role: '{{ playbook_dir }}/../roles/letsencrypt'
   - role: '{{ playbook_dir }}/../roles/deploy'
     deploy_user: "{{ api_user }}"
     deploy_to: "{{ api_deploy_to }}"
