--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Add node key to apt
   apt_key:
     id: 1655A0AB68576280
-    url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
+    url: http://deb.nodesource.com/gpgkey/nodesource.gpg.key
 
 - name: Add apt repository
   apt_repository:
